# XingTu

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/python/: requirements.txt
src-tauri/resources/python/tools/: compress.py  download_final2x.py  format.py  koutu.py  remove.py  save.py
src-tauri/src/: lib.rs  main.rs
src/assets/: style.css  theme.css
src/components/: Compress.vue  Cropping.vue  Final2x.vue  Format.vue  KouTu.vue  LeftSide.vue  Setting.vue  Split.vue
src/components/common/: Button.vue  Loading.vue  SelectPath.vue  ToolDesc.vue  UploadArea.vue  UploadButton.vue
src/components/setting/: Author.vue  Config.vue
src/constant/: index.ts
src/router/: index.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: index.ts
src/views/: Home.vue
